--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "@akibkhan/validatets",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Lightweight validation framework for typescript",
   "main": "dist/index.js",
   "bin": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
+    "clean": "rm -rf dist",
     "build:dev": "nodemon src/index.ts",
-    "build": "tsc",
-    "publish": ""
+    "build": "npm run clean && tsc"
   },
   "keywords": [
     "typescript",
