--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "bin": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "jest",
     "clean": "rm -rf dist",
+    "test": "npm run clean && jest",
     "build:dev": "nodemon src/index.ts",
     "build": "npm run clean && tsc"
   },
