--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "clean": "rm -rf dist",
-    "test": "npm run clean && jest",
+    "test": "jest",
+    "test:clean": "npm run clean && jest",
     "build:dev": "nodemon src/index.ts",
     "build": "npm run clean && tsc"
   },
