--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@akibkhan/validatets",
-  "version": "2.0.0",
+  "name": "@akibrk/validator",
+  "version": "1.0.0",
   "description": "Lightweight validation framework for typescript",
   "main": "dist/index.js",
   "bin": "dist/index.js",
@@ -18,6 +18,9 @@
     "validator",
     "schema validation"
   ],
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com"
+  },
   "author": {
     "name": "Akib Khan",
     "email": "akib@xnzark.com",
