--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@akibrk/validator",
+  "name": "@akibrk/ts-validator",
   "version": "1.0.0",
   "description": "Lightweight validation framework for typescript",
   "main": "dist/index.js",
@@ -28,12 +28,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/akibrk/validatets"
+    "url": "git://github.com/akibrk/ts-validator.git"
   },
   "bugs": {
-    "url": "https://github.com/akibrk/validatets/issues"
+    "url": "https://github.com/akibrk/ts-validator/issues"
   },
-  "homepage": "https://github.com/akibrk/validatets#readme",
+  "homepage": "https://github.com/akibrk/ts-validator#readme",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^26.0.23",
