--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "author": {
     "name": "Akib Khan",
-    "email": "akib@xnzark.com",
+    "email": "packages@akibrk.com",
     "url": "https://www.github.com/akibrk"
   },
   "repository": {
