--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "email": "packages@akibrk.com",
     "url": "https://www.github.com/akibrk"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/akibrk/ts-validator.git"
