--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,10 @@
     /* Advanced Options */
     "skipLibCheck": true,                           /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "exclude": [
+    "spec",
+    "spec/*.spec.ts"
+
+  ]
 }
