--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "clean": "rm -rf dist",
     "test": "npm run clean && jest",
     "build:dev": "nodemon src/index.ts",
-    "build": "npm run clean && tsc"
+    "build": "npm run clean && tsc",
+    "coverage": "npm run clean && jest --coverage"
   },
   "keywords": [
     "typescript",
