--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "build": "npm run clean && tsc",
     "build:dev": "nodemon src/index.ts",
     "coverage": "npm run clean && jest --coverage",
-    "prepublish": "npm run test && npm run build",
-    "publish": "npm publish"
+    "prepublish": "npm run test && npm run build"
   },
   "keywords": [
     "typescript",
